# fnz10-to-sqlite

./: .gitignore  README.md  main.py  pyproject.toml
