[project]
name = "kfz-de-to-sqlite"
version = "0.1.0"
description = "convert Kraftfahrt-Bundesamt statistics to SQLite"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diskcache>=5.6.3",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "typer>=0.16.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
